# Il-Tuo-allenatore

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.ts
app/: database.py  main.py  models.py  schemas.py  services.py
app/web/: app.js  index.html  styles.css
prisma/: schema.prisma  seed.ts
src/app/: layout.tsx  page.tsx
src/app/(auth)/login/: page.tsx
src/app/api/athlete/calendar/: route.ts
src/app/api/athlete/feedback/: route.ts
src/app/api/auth/login/: route.ts
src/app/api/coach/assignments/: route.ts
src/app/api/coach/athletes/: route.ts
src/app/api/coach/summary/: route.ts
src/app/api/coach/workouts/: route.ts
src/app/athlete/calendar/: page.tsx
src/app/athlete/workouts/[id]/: page.tsx
src/app/coach/athletes/: page.tsx
src/app/coach/dashboard/: page.tsx
src/app/coach/summary/: page.tsx
src/app/coach/workouts/: page.tsx
src/components/layout/: app-shell.tsx  page-header.tsx
src/components/ui/: button.tsx  card.tsx
src/lib/: auth.ts  validators.ts
tests/: test_api.py  test_services.py
