[project]
name = "il-tuo-allenatore"
version = "0.1.0"
description = "API per la gestione di programmi di allenamento ciclismo"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "sqlalchemy>=2.0",
  "pydantic>=2.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
